<resources>
    <string name="app_name">WatchFlow</string>
    <string name="title_activity_maps">Maps</string>
    <string name="title_activity_main">WatchFlow</string>
    <string name="title_activity_operations">Operações</string>
    <string name="title_activity_dashboard">Painel de Controle</string>
    <string name="title_activity_dashboard_configurations">Configurar Painel de Controle</string>
    <string name="title_activity_camera_dashboard">Painel da Câmera</string>
    <string name="title_activity_cam_information">Informações da Câmera</string>
    <string name="title_activity_user_information">Informações do Usuário</string>
    <string name="title_activity_filter">Filtro</string>

    <string name="shared_pref_dashboard_key">com.example.watchflow.PREFERENCE_FILE_KEY</string>

    <string name="ip_string">IP</string>
    <string name="register">Registrar</string>
    <string name="remove">Remover</string>
    <string name="login_username_hint">Usuário</string>
    <string name="login_password_hint">Senha</string>
    <string name="login_phone_hint">Telefone</string>
    <string name="update">Atualizar</string>
    <string name="login_signup_hint">Não possui conta? Contate o administrador</string>
    <string name="login">Entrar</string>
    <string name="login_title">Login</string>
    <string name="your_position">Sua posição</string>

    <string name="server_error_message">Erro com o servidor</string>

    <!--    APP MESSAGES-->
    <string name="missing_fields_login">Preencha corretamente</string>
    <string name="fail_message_login">Não foi possível efetuar o login</string>
    <string name="invalid_user_message">Usuário Inválido</string>
    <string name="all_running_cams_fail_message">Não foi possível receber as câmeras</string>
    <string name="all_logged_users_fail_message">Não foi possível receber os usuários</string>
    <string name="logout_fail_message">Não foi possível efetuar o logout</string>
    <string name="logout_success_message">Logout feito com sucesso</string>
    <string name="refresh_txt">Recarregar</string>
    <string name="users_txt">Usuários</string>
    <string name="register_user_txt">Registrar usuário</string>
    <string name="remove_users_txt">Remover usuário</string>
    <string name="cameras_txt">Câmeras</string>
    <string name="register_cameras_txt">Registrar câmera</string>
    <string name="remove_cameras_txt">Remover câmera</string>
    <string name="logout_txt">Logout</string>
    <string name="update_phone_txt">Atualizar Telefone</string>
    <string name="only_adm_message_txt">Somente Administrador</string>
    <string name="incorrect_ip_message_txt">IP inválido</string>

    <!--    REGISTER USER-->
    <string name="register_admin_question_txt">Usuário administrador?</string>
    <string name="register_user_success_message">Usuário registrado com sucesso</string>
    <string name="register_user_fail_message">Erro ao registrar usuário</string>

    <!--    DELETE USER-->
    <string name="delete_user_success_message">Usuário removido com sucesso</string>
    <string name="delete_user_fail_message">Erro ao remover usuário</string>

    <!--    REGISTER CAM-->
    <string name="register_cam_street">Rua</string>
    <string name="register_cam_num">Número</string>
    <string name="register_cam_neighborhood">Bairro</string>
    <string name="register_cam_city">Cidade</string>
    <string name="register_cam_country">País</string>
    <string name="register_cam_success_message">Câmera registrada com sucesso</string>
    <string name="register_cam_fail_message">Erro ao registrar câmera</string>

    <!--    DELETE CAM-->
    <string name="delete_cam_success_message">Câmera removida com sucesso</string>
    <string name="delete_cam_fail_message">Erro ao remover câmera</string>

    <!--    UPDATE PHONE-->
    <string name="update_phone">Novo Telefone</string>
    <string name="update_phone_success_message">Telefone atualizado</string>
    <string name="update_phone_fail_message">Erro ao atualizar telefone</string>

    <!--    GET CAMERA INFORMATIONS-->
    <string name="camera_informations_fail_message">Erro ao receber dados</string>

    <!--    RECOGNITIONS-->
    <string name="address_title">Endereço:</string>
    <string name="ip_title">IP:</string>
    <string name="recognitions_total">Total:</string>
    <string name="recognitions_articulated_truck">Caminhões Articulados:</string>
    <string name="recognitions_bicycle">Bicicletas:</string>
    <string name="recognitions_bus">Ônibus:</string>
    <string name="recognitions_car">Carros:</string>
    <string name="recognitions_motorcycle">Motocicletas:</string>
    <string name="recognitions_motorized_vehicle">Veículos Motorizados:</string>
    <string name="recognitions_non_motorized_vehicle">Veículos Não Motorizados:</string>
    <string name="recognitions_pedestrian">Pedestres:</string>
    <string name="recognitions_pickup_truck">Picapes:</string>
    <string name="recognitions_single_unit_truck">Caminhões de unidade única:</string>
    <string name="recognitions_work_van">Vans:</string>


    <string name="camera_localization">Dados de Localização</string>
    <string name="camera_recognitions">Dados de Reconhecimento</string>
    <string name="showTraffic">Exibir Tráfego</string>
    <string name="user_information_username_title">Usuário:</string>
    <string name="user_information_user_phone_title">Telefone:</string>
    <string name="user_information_user_location_title">Localização:</string>
    <string name="toggle_traffic_text">Alternar Tráfego</string>
    <string name="dashboard_text">Painel de Controle</string>
    <string name="configurations_txt">Configurações</string>
    <string name="dashboard_config_txt">Configurar painel de controle</string>
    <string name="configuration_activity_main_title_text">Selecione quais câmeras deverão aparecer no painel de controle (Limite de 5)</string>
    <string name="configuration_activity_main_subtitle_text">*Limite de 5</string>
    <string name="save_text">Salvar</string>
    <string name="call_text">Ligar</string>

    <string name="success_saving_text">Salvo com sucesso</string>
    <string name="failure_saving_text">Não foi possível salvar</string>
    <string name="dashboardErrorDialogTitle">Dashboard não configurada</string>
    <string name="dashboardErrorDialogMessage">Gostaria de ir a tela de configurações?</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancelar</string>
    <string name="permission_needed_txt">Permissão Necessária</string>
    <string name="permission_needed_message_txt">Permissão necessária para a aplicação funcionar corretamente...</string>
    <string name="total_graph_title">Gráfico consolidado de todas as câmeras</string>
    <string name="total_graph_subtitle">Dados exibidos no formato: Total de reconhecimento x Tempo</string>
    <string name="title_camera_dashboard">Painel da Câmera</string>
    <string name="historic_tag_for_intent">Historic</string>
    <string name="graphs_title">Gráficos</string>
    <string name="filter_text">Filtro</string>
    <string name="change_text">Alterar</string>
    <string name="finish_text">Concluir</string>
    <string name="start_date_txt">Data Inicial:</string>
    <string name="final_date_txt">Data Final:</string>
</resources>