<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".operations.RegisterCamFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.watchflow.operations.OperationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSecondary">

        <RelativeLayout
            style="@style/loginParent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ScrollView style="@style/parent">

                <RelativeLayout style="@style/parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:weightSum="12">

                        <LinearLayout
                            style="@style/parent"
                            android:layout_weight="3"
                            android:background="@drawable/login_shape_bk"
                            android:orientation="vertical">

                            <ImageView
                                style="@style/parent"
                                android:background="@drawable/ic_login_bk"
                                android:contentDescription="login background" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginRight="30dp"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            style="@style/loginCard"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/viewsMargin"
                            android:layout_marginBottom="@dimen/viewsMargin"
                            android:elevation="5dp"
                            app:cardCornerRadius="@dimen/loginCardRadius">


                            <LinearLayout
                                style="@style/linearParent"
                                android:layout_gravity="center"
                                android:padding="@dimen/viewsMargin">

                                <TextView
                                    style="@style/headerTextPrimary"
                                    android:layout_marginTop="@dimen/viewsMargin"
                                    android:text="@string/register_cameras_txt" />

                                <com.google.android.material.textfield.TextInputLayout
                                    android:id="@+id/textInputIP"
                                    style="@style/textInputLayout"
                                    android:layout_marginTop="@dimen/viewsMargin">

                                    <EditText
                                        android:id="@+id/editTextIP"
                                        style="@style/modifiedEditText"
                                        android:hint="@string/ip_string"
                                        android:inputType="text"
                                        android:maxLines="1"
                                        android:text="@={viewModel.cameraInfo.IP}" />
                                </com.google.android.material.textfield.TextInputLayout>

                                <com.google.android.material.textfield.TextInputLayout
                                    android:id="@+id/textInputStreet"
                                    style="@style/textInputLayout"
                                    android:layout_marginTop="@dimen/viewsMargin">

                                    <EditText
                                        android:id="@+id/editTextStreet"
                                        style="@style/modifiedEditText"
                                        android:hint="@string/register_cam_street"
                                        android:inputType="text"
                                        android:maxLines="1"
                                        android:text="@={viewModel.cameraInfo.street}" />
                                </com.google.android.material.textfield.TextInputLayout>

                                <com.google.android.material.textfield.TextInputLayout
                                    android:id="@+id/textInputStreetNumber"
                                    style="@style/textInputLayout"
                                    android:layout_marginTop="@dimen/viewsMargin">

                                    <EditText
                                        android:id="@+id/editTextStreetNumber"
                                        style="@style/modifiedEditText"
                                        android:hint="@string/register_cam_num"
                                        android:inputType="number"
                                        android:maxLines="1"
                                        android:text="@={viewModel.cameraInfo.number}" />
                                </com.google.android.material.textfield.TextInputLayout>

                                <com.google.android.material.textfield.TextInputLayout
                                    android:id="@+id/textInputNeighborhood"
                                    style="@style/textInputLayout"
                                    android:layout_marginTop="@dimen/viewsMargin">

                                    <EditText
                                        android:id="@+id/editTextNeighborhood"
                                        style="@style/modifiedEditText"
                                        android:hint="@string/register_cam_neighborhood"
                                        android:inputType="text"
                                        android:maxLines="1"
                                        android:text="@={viewModel.cameraInfo.neighborhood}" />
                                </com.google.android.material.textfield.TextInputLayout>

                                <com.google.android.material.textfield.TextInputLayout
                                    android:id="@+id/textInputCity"
                                    style="@style/textInputLayout"
                                    android:layout_marginTop="@dimen/viewsMargin">

                                    <EditText
                                        android:id="@+id/editTextCity"
                                        style="@style/modifiedEditText"
                                        android:hint="@string/register_cam_city"
                                        android:inputType="text"
                                        android:maxLines="1"
                                        android:text="@={viewModel.cameraInfo.city}" />
                                </com.google.android.material.textfield.TextInputLayout>

                                <com.google.android.material.textfield.TextInputLayout
                                    android:id="@+id/textInputCountry"
                                    style="@style/textInputLayout"
                                    android:layout_marginTop="@dimen/viewsMargin">

                                    <EditText
                                        android:id="@+id/editTextCountry"
                                        style="@style/modifiedEditText"
                                        android:hint="@string/register_cam_country"
                                        android:inputType="text"
                                        android:maxLines="1"
                                        android:text="@={viewModel.cameraInfo.country}" />
                                </com.google.android.material.textfield.TextInputLayout>

                                <Button
                                    android:id="@+id/button"
                                    style="@style/buttonStyle"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginTop="@dimen/viewsMargin"
                                    android:text="@string/register" />

                            </LinearLayout>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </RelativeLayout>
            </ScrollView>
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>