<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSecondary">

        <RelativeLayout
            style="@style/loginParent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:context="com.appsnipp.loginsamples.LoginActivity">

            <ScrollView style="@style/parent">

                <RelativeLayout style="@style/parent">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:weightSum="12">

                        <LinearLayout
                            style="@style/parent"
                            android:layout_weight="3"
                            android:background="@drawable/login_shape_bk"
                            android:orientation="vertical">

                            <ImageView
                                style="@style/parent"
                                android:background="@drawable/ic_login_bk"
                                android:contentDescription="login background" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginRight="30dp"
                        android:orientation="vertical">


                        <TextView
                            style="@style/headerText"
                            android:layout_gravity="center"
                            android:layout_marginTop="40dp"
                            android:text="@string/app_name" />

                        <androidx.cardview.widget.CardView
                            style="@style/loginCard"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:layout_marginBottom="@dimen/loginViewsMargin"
                            android:elevation="5dp"
                            app:cardCornerRadius="@dimen/loginCardRadius">


                            <LinearLayout
                                style="@style/linearParent"
                                android:layout_gravity="center"
                                android:padding="@dimen/loginViewsMargin">

                                <TextView
                                    style="@style/headerTextPrimary"
                                    android:layout_marginTop="@dimen/loginViewsMargin"
                                    android:text="@string/login_title" />

                                <com.google.android.material.textfield.TextInputLayout
                                    android:id="@+id/textInputEmail"
                                    style="@style/parent"
                                    android:layout_marginTop="@dimen/loginViewsMargin">

                                    <EditText
                                        android:id="@+id/editTextEmail"
                                        style="@style/modifiedEditText"
                                        android:hint="@string/login_email_hint"
                                        android:inputType="textEmailAddress"
                                        android:maxLines="1" />
                                </com.google.android.material.textfield.TextInputLayout>

                                <com.google.android.material.textfield.TextInputLayout
                                    android:id="@+id/textInputPassword"
                                    style="@style/parent"
                                    android:layout_marginTop="@dimen/loginViewsMargin">

                                    <EditText
                                        android:id="@+id/editTextPassword"
                                        style="@style/modifiedEditText"
                                        android:hint="@string/login_password_hint"
                                        android:inputType="textPassword"
                                        android:maxLines="1" />
                                </com.google.android.material.textfield.TextInputLayout>

                                <Button
                                    android:id="@+id/loginButton"
                                    style="@style/loginButton"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginTop="@dimen/loginViewsMargin"
                                    android:text="@string/login" />

                                <TextView
                                    style="@style/parent"
                                    android:layout_marginTop="@dimen/loginViewsMargin"
                                    android:text="@string/login_signup_hint"
                                    android:textAlignment="center"
                                    android:textColor="@color/primaryTextColor"
                                    android:textStyle="bold" />


                            </LinearLayout>
                        </androidx.cardview.widget.CardView>

                    </LinearLayout>
                </RelativeLayout>

            </ScrollView>

        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>