<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="ip"
            type="String" />

        <variable
            name="address"
            type="String" />
            </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="@color/colorSecondary">

        <TextView
            android:id="@+id/cam_dash_ip_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:text="@string/ip_title"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cam_dash_ip_item_content"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cam_dash_ip_item_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/whiteTextColor"
            tools:text="127.0.0.1"
            android:text="@{ip}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/cam_dash_ip_item_title"
            app:layout_constraintStart_toEndOf="@id/cam_dash_ip_item_title"
            app:layout_constraintTop_toTopOf="@id/cam_dash_ip_item_title" />

        <TextView
            android:id="@+id/cam_dash_address_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/address_title"
            app:layout_constraintEnd_toStartOf="@id/cam_dash_address_item_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cam_dash_ip_item_content" />

        <TextView
            android:id="@+id/cam_dash_address_item_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/whiteTextColor"
            tools:text="Endereço"
            android:text="@{address}"
            app:layout_constraintTop_toTopOf="@id/cam_dash_address_item_title"
            app:layout_constraintStart_toEndOf="@id/cam_dash_address_item_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/cam_dash_address_item_title"/>

        <TextView
            android:id="@+id/cam_dash_graphs_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/graphs_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cam_dash_address_item_content" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/cam_dash_graphs_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cam_dash_graphs_item_title">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cam_dash_graphs_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
